Add '-Wno-unknown-pragmas' option to ignore Vivado HLS gragma in g++

--- a/single_3d_hls_route/Makefile
+++ b/single_3d_hls_route/Makefile
@@ -2,7 +2,7 @@ TARGET = sim
 OBJS = $(CPPS:.cpp=.o)
 CPPS = $(wildcard *.cpp)
 CXX = g++
-CXXFLAGS = -Wall -DSOFTWARE
+CXXFLAGS = -Wall -Wno-unknown-pragmas -DSOFTWARE
 
 all: $(TARGET)
 
